e2e/fixtures/gateway/backendconfig/no-backend-protocol.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-no-backend-protocol-test
  namespace: default
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - no-backend-protocol-test.gateway.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
