e2e/fixtures/gateway/backendconfig/service-upstream-false.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-service-upstream-false-test
  namespace: default
spec:
  parentRefs:
    - name: traefik
  hostnames:
    - service-upstream-false-test.gateway.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
